# SortData

./: CMakeLists.txt  README.md
docs/: string.md
source/: custom_string.c  custom_string.h  main.c  quicksort.c  quicksort.h
source/files/: custom_file.c  custom_file.h
source/strings/: custom_string.c  custom_string.h
